znk-exercise fix overflow

--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -23,6 +23,11 @@ znk-exercise {
 
     question-builder {
         height: 100%;
+
+        reading-question {
+            height: 100%;
+            display: block;
+        }
     }
 
     .question-bottom-shadow{
