--- a/src/components/znkExercise/scss/_znk-exercise-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-desktop.scss
@@ -126,7 +126,7 @@ znk-exercise.desktop {
                     }
                 }
                 .swiper-slide-active {
-                  height: 95%;
+                  height: 93%;
                 }
             }
         }
